[package]
name = "chriscord-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chriscord-server"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1", features = ["full"] }
axum         = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower-http   = { version = "0.5", features = ["cors", "fs"] }
sqlx         = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
uuid         = { version = "1", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
rand         = "0.8"
futures-util = "0.3"
tracing      = "0.1"
tracing-subscriber = "0.3"
mime_guess   = "2"
